Improve vertical spacing & use better workaround for apos line-height issue

--- a/modules/@apostrophecms/rich-text-widget/ui/src/index.scss
+++ b/modules/@apostrophecms/rich-text-widget/ui/src/index.scss
@@ -1,14 +1,5 @@
 .bp-rich-text-widget {
   p, h1, h2, h3, h4, h5, h6, ul, ol, hr {
-    margin: 1rem 0;
-    line-height: 1; // TODO: this shouldn't be needed, but apostrophe changes line-height in edit mode
-
-    &:first-child {
-      margin-top: 0;
-    }
-
-    &:last-child {
-      margin-bottom: 0;
-    }
+    margin: 0;
   }
 }
