--- a/modules/fancy-list-widget/ui/src/index.scss
+++ b/modules/fancy-list-widget/ui/src/index.scss
@@ -8,6 +8,7 @@
         padding: 0 0 0 1rem;
         font-size: var(--my-icon-size);
         color: var(--my-icon-color);
+        line-height: 1;
       }
 
       .fancy-list-widget__text {
